fix: Added overflow-y

--- a/src/features/contact/Contact.module.css
+++ b/src/features/contact/Contact.module.css
@@ -60,6 +60,10 @@
 /********** RESPONSIVE **********/
 
 @media screen and (max-width: 599px) {
+	.contactContainer {
+		overflow-y: auto;
+	}
+
 	.contactMailItem:hover p {
 		display: inline-block;
 	}
